2000-12-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* savepcx.cc: fixed 8 bit output (RGB <-> BGR)
	* mapedit/.cvsignore: added 'paltest'

2000-12-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* savepcx.cc: unsigned long -> Uint32, unsigned short -> Uint16
	* configure.in: removed a few crosscompiling-related warnings
	* configure.in,mapedit/Makefile.am: fixed gtk-interface conditional

2000-12-23  Jeff Freedman  <jeff@amy.nerble.net>

	* xdrag.cc (Xdnd): Moved XDND code here.
	* Set frame in shape chooser.

2000-12-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* imagewin/savepcx.cc, imagewin.cc/h: add .pcx saving functionality
	* exult.cc: ctrl-alt-s takes a screenshot to exult%03i.pcx

2000-12-20  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Actor): Make 'follow()' more sensitive to NPC's being
	left behind.

2000-12-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: fixed --disable-long-long-warnings

2000-12-18  Christoph Reichenbach  <jameson@linuxgames.com>

	* Applied the Alpha/Debian/cxx patch, updated README.Alpha
	* Many files now include "alpha_kludges.h"
	* hash_maps and hash_sets are now used iff DONT_HAVE_HASH_MAP/
	DONT_HAVE_HASH_SET are /not/ defined. Those are #defined in
	alpha_kludges.h iff HAVE_CONFIG_H is defined and the hash_map
	and hash_set header files were found during configure time.
	* Misc. int/long int -> u?int32 fixes all over the place
	* configure.in: added --disable-long-long-warnings

2000-12-18  Jeff Freedman  <jeff@amy.nerble.net>

	* Shape dragging uses shape as its icon.
	* Add objects that are dragged.

2000-12-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* conf/Configuration.cc: moved BeOS config file to ~/config/settings/

2000-12-14  Jeff Freedman  <jeff@amy.nerble.net>

	* Schec. usecode opcode 0x56 means:  play speech track.

2000-12-14  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in: Fill out GTK+ discovery stuff